Fix new button on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -385,7 +385,7 @@ input, textarea {
 }
 .manga-card .title-div > span .badge {
 	margin-right: 5px;
-	display: block;
+	display: inline-block;
 }
 .manga-card .title-div .to-manga-page {
 	margin-left: 5px;
